tooling/nargo_cli/tests/snapshots/execution_success/regression_8980/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
[regression_8980] Circuit output: 1
